--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon1.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Lato"
+      href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Lato|Playfair+Display:700"
       rel="stylesheet"
     />
     <title>Claire Watson</title>
